--- a/53. Maximum Subarray.ipynb
+++ b/53. Maximum Subarray.ipynb
@@ -24,6 +24,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runtime時間較短\n",
+    "\n",
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxSubArray(self, nums: List[int]) -> int:\n",
+    "        # 紀錄第一個數字結尾的最大子序列和\n",
+    "        dp = nums[0]\n",
+    "        # 記錄目前找到的最大子序列和\n",
+    "        result = nums[0]\n",
+    "        print(f\"{dp = }, {result = }\")\n",
+    "\n",
+    "        # 從第二個數字開始遍歷\n",
+    "        for num in nums[1:]:\n",
+    "            # 計算以當前數字結尾的最大子序列和\n",
+    "            # 1. 將當前數字加入前一個子序列(dp + num)\n",
+    "            # 2. 從當前數字重新開始(num)\n",
+    "            dp = max(dp + num, num)\n",
+    "\n",
+    "            # 更新全局最大值\n",
+    "            if dp > result:\n",
+    "                result = dp\n",
+    "                \n",
+    "            print(f\"{dp = }, {result = }\")\n",
+    "\n",
+    "        # 返回找到的最大子序列和\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dp = -2, result = -2\n",
+      "dp = 1, result = 1\n",
+      "dp = -2, result = 1\n",
+      "dp = 4, result = 4\n",
+      "dp = 3, result = 4\n",
+      "dp = 5, result = 5\n",
+      "dp = 6, result = 6\n",
+      "dp = 1, result = 6\n",
+      "dp = 5, result = 6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
+    "Solution().maxSubArray(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O(n)\n",
+    "* 空間複雜度: O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -49,66 +128,6 @@
       ]
      },
      "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Runtime時間較短\n",
-    "class Solution:\n",
-    "    def maxSubArray(self, nums):\n",
-    "        dp = nums[0]\n",
-    "        result = nums[0]\n",
-    "        print(f\"{dp = }, {result = }\")\n",
-    "\n",
-    "        for num in nums[1:]:\n",
-    "            dp = max(dp + num, num)\n",
-    "            \n",
-    "            if dp > result:\n",
-    "                result = dp\n",
-    "            print(f\"{dp = }, {result = }\")\n",
-    "\n",
-    "        return result\n",
-    "\n",
-    "nums = [-2,1,-3,4,-1,2,1,-5,4]\n",
-    "Solution().maxSubArray(nums)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 時間複雜度: O(n)\n",
-    "* 空間複雜度: O(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dp = -2, result = -2\n",
-      "dp = 1, result = 1\n",
-      "dp = -2, result = 1\n",
-      "dp = 4, result = 4\n",
-      "dp = 3, result = 4\n",
-      "dp = 5, result = 5\n",
-      "dp = 6, result = 6\n",
-      "dp = 1, result = 6\n",
-      "dp = 5, result = 6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
