--- a/572. Subtree of Another Tree.ipynb
+++ b/572. Subtree of Another Tree.ipynb
@@ -71,48 +71,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "root = TreeNode(\n",
-    "    val = 3,\n",
-    "    left = TreeNode(\n",
-    "        val = 4,\n",
-    "        left = TreeNode(\n",
-    "            val = 1,\n",
-    "            left = None,\n",
-    "            right = None\n",
-    "        ),\n",
-    "        right = TreeNode(\n",
-    "            val = 2,\n",
-    "            left = TreeNode(\n",
-    "                val = 0,\n",
-    "                left = None,\n",
-    "                right = None\n",
-    "            ),\n",
-    "            right = None\n",
-    "        ),\n",
-    "    ),\n",
-    "    right = TreeNode(\n",
-    "        val = 5,\n",
-    "        left = None,\n",
-    "        right = None\n",
-    "    )\n",
-    ")\n",
+    "**時間複雜度: $O(n * m)$**  \n",
+    "**空間複雜度: $O(n + m)$**\n",
     "\n",
-    "subRoot = TreeNode(\n",
-    "    val = 4,\n",
-    "    left = TreeNode(\n",
-    "        val = 1,\n",
-    "        left = None,\n",
-    "        right = None\n",
-    "    ),\n",
-    "    right = TreeNode(\n",
-    "        val = 2,\n",
-    "        left = None,\n",
-    "        right = None\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "#Input: root = [3,4,5,1,2,null,null,null,null,0], subRoot = [4,1,2]\n",
-    "#Output: false"
+    "$ n $: root 的 node 數  \n",
+    "$ m $: subRoot 的 node 數"
    ]
   },
   {
@@ -121,67 +84,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Optional\n",
+    "\n",
     "class Solution:\n",
-    "    def isSubtree(self, root, subRoot):\n",
-    "        # 判斷是否已經遍歷到root的底部，如果是，返回False\n",
+    "    def isSubtree(self, root: Optional[TreeNode], subRoot: Optional[TreeNode]) -> bool:  # time: O(n * m), space: O(n + m)\n",
+    "        # 如果 subRoot 為空樹，則必定是任何樹的子樹，回傳 True\n",
+    "        if not subRoot:\n",
+    "            return True\n",
+    "        \n",
+    "        # 如果 root 為空樹，但 subRoot 不為空，則不可能是子樹，回傳 False\n",
     "        if not root:\n",
-    "            return False        \n",
+    "            return False\n",
     "        \n",
-    "        print(\"=\" * 200)\n",
-    "        print(f\"root = {root.val}, subRoot = {subRoot.val}\")\n",
-    "        \n",
-    "        # 調用isSametree函數，檢查當前root與subRoot是否相等\n",
-    "        flag1 = self.isSametree(root, subRoot)\n",
-    "        print(f\"{root.val} - isSametree = {flag1}\")\n",
-    "        if flag1:\n",
+    "        # 檢查當前 root 與 subRoot 是否為相同的樹\n",
+    "        same_tree_flag = self.same_tree(root, subRoot) # time: O(m), space: O(m)\n",
+    "        if same_tree_flag:\n",
     "            return True\n",
     "        \n",
-    "        # 調用isSubtree函數，調整root起始的根節點為root的左子樹\n",
-    "        print(f\"{root.val} - isSubtree - left\")\n",
-    "        flag2 = self.isSubtree(root.left, subRoot)\n",
-    "        print(f\"{root.val} - isSubtree - left  = flag2 = {flag2}\")\n",
-    "        if flag2:\n",
+    "        # 如果當前 root 與 subRoot 不相同，\n",
+    "        # 則繼續遞迴檢查 root 的左子樹與右子樹是否包含 subRoot\n",
+    "        left_flag = self.isSubtree(root.left, subRoot) # time: O(n), space: O(n)\n",
+    "        right_flag = self.isSubtree(root.right, subRoot) # time: O(n), space: O(n)\n",
+    "\n",
+    "        # 只要左子樹或右子樹有符合，就回傳 True\n",
+    "        return left_flag or right_flag\n",
+    "\n",
+    "    def same_tree(self, root, subRoot):\n",
+    "        # 若兩棵樹同時為空，則結構相同，回傳 True\n",
+    "        if not root and not subRoot:\n",
     "            return True\n",
     "        \n",
-    "        # 調用isSubtree函數，調整root起始的根節點為root的右子樹\n",
-    "        print(f\"{root.val} - isSubtree - right\")\n",
-    "        flag3 = self.isSubtree(root.right, subRoot)\n",
-    "        print(f\"{root.val} - isSubtree - right = flag3 = {flag3}\")\n",
-    "        if flag3:\n",
-    "            return True\n",
+    "        # 若兩棵樹都不為空，且當前節點值相等，\n",
+    "        # 則繼續檢查左右子樹是否相同\n",
+    "        if root and subRoot and root.val == subRoot.val:\n",
+    "            left_flag = self.same_tree(root.left, subRoot.left)\n",
+    "            right_flag = self.same_tree(root.right, subRoot.right)\n",
+    "\n",
+    "            # 只有當左右子樹都相同時才回傳 True\n",
+    "            return left_flag and right_flag\n",
     "        \n",
-    "\n",
-    "    def isSametree(self, node, subNode):\n",
-    "        print(\"-\" * 200)\n",
-    "        # 如果兩個節點都存在\n",
-    "        if node and subNode:\n",
-    "            # 判斷根節點的值是否相等\n",
-    "            flag1 = (node.val == subNode.val)\n",
-    "            print(f\"((node.val = {node.val}) == (subNode.val = {subNode.val}))  = flag1 = {(flag1)}\")\n",
-    "            if not flag1:\n",
-    "                return False\n",
-    "\n",
-    "            # 遞迴判斷左子樹是否有相同的結構\n",
-    "            print(f\"{node.val} - left\")\n",
-    "            flag2 = self.isSametree(node.left, subNode.left)\n",
-    "            print(f\"{node.val} - left  = flag2 = {flag2}\")\n",
-    "            if not flag2:\n",
-    "                return False\n",
-    "\n",
-    "            # 遞迴判斷右子樹是否有相同的結構\n",
-    "            print(f\"{node.val} - right\")\n",
-    "            flag3 = self.isSametree(node.right, subNode.right)\n",
-    "            print(f\"{node.val} - right  = flag3 = {flag3}\")\n",
-    "            if not flag3:\n",
-    "                return False\n",
-    "            \n",
-    "            # 三個判斷都成立才返回True\n",
-    "            print(f\"{node.val} - (flag1 and flag2 and flag3) = {flag1} and {flag2} and {flag3} = {flag1 and flag2 and flag3}\")\n",
-    "            return flag1 and flag2 and flag3\n",
-    "        \n",
-    "        # 判斷兩者是否都為None\n",
-    "        print(f\"None - (node == subNode) = {node == subNode}\")\n",
-    "        return node == subNode\n"
+    "        # 其他情況（結構不同或值不同），回傳 False\n",
+    "        return False"
    ]
   },
   {
@@ -189,51 +132,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================================================================================================================================================================================\n",
-      "root = 3, subRoot = 4\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "((node.val = 3) == (subNode.val = 4))  = flag1 = False\n",
-      "3 - isSametree = False\n",
-      "3 - isSubtree - left\n",
-      "========================================================================================================================================================================================================\n",
-      "root = 4, subRoot = 4\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "((node.val = 4) == (subNode.val = 4))  = flag1 = True\n",
-      "4 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "((node.val = 1) == (subNode.val = 1))  = flag1 = True\n",
-      "1 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "None - (node == subNode) = True\n",
-      "1 - left  = flag2 = True\n",
-      "1 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "None - (node == subNode) = True\n",
-      "1 - right  = flag3 = True\n",
-      "1 - (flag1 and flag2 and flag3) = True and True and True = True\n",
-      "4 - left  = flag2 = True\n",
-      "4 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "((node.val = 2) == (subNode.val = 2))  = flag1 = True\n",
-      "2 - left\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "None - (node == subNode) = True\n",
-      "2 - left  = flag2 = True\n",
-      "2 - right\n",
-      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "None - (node == subNode) = True\n",
-      "2 - right  = flag3 = True\n",
-      "2 - (flag1 and flag2 and flag3) = True and True and True = True\n",
-      "4 - right  = flag3 = True\n",
-      "4 - (flag1 and flag2 and flag3) = True and True and True = True\n",
-      "4 - isSametree = True\n",
-      "3 - isSubtree - left  = flag2 = True\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -252,7 +150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
