--- a/235. Lowest Common Ancestor of a Binary Search Tree.ipynb
+++ b/235. Lowest Common Ancestor of a Binary Search Tree.ipynb
@@ -79,23 +79,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recursion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(h)$**  \n",
+    "**空間複雜度: $O(h)$**\n",
+    "\n",
+    "$ h $: root 的高度  \n",
+    "最佳的情況為平衡樹: $h$ 是 $ O(log n) $  \n",
+    "最差的情況為退化成鏈狀: $h$ 是 $ O(n) $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def lowestCommonAncestor(self, root, p, q):\n",
-    "        while True:\n",
-    "            print(f\"root = {root.val}, p = {p.val}, q = {q.val}\")\n",
-    "            if (root.val > p.val) and (root.val > q.val):  # 如果根節點的值大於p和q的值\n",
-    "                root = root.left  # 向左子樹移動\n",
+    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "        # 如果根節點或 p 或 q 為空，則無法找到共同祖先，回傳 None\n",
+    "        if not root or not p or not q:\n",
+    "            return None\n",
     "\n",
-    "            elif (root.val < p.val) and (root.val < q.val):  # 如果根節點的值小於p和q的值\n",
-    "                root = root.right  # 向右子樹移動\n",
+    "        # 如果 p 和 q 的值都比根節點小，代表它們都在左子樹\n",
+    "        if p.val < root.val and q.val < root.val:\n",
+    "            return self.lowestCommonAncestor(root.left, p, q)  # 遞迴往左子樹搜尋\n",
     "\n",
-    "            else:  # 如果根節點的值在p和q之間，或者等於其中一個的值\n",
-    "                return root  # 返回根節點作為最低共同祖先\n"
+    "        # 如果 p 和 q 的值都比根節點大，代表它們都在右子樹\n",
+    "        elif p.val > root.val and q.val > root.val:\n",
+    "            return self.lowestCommonAncestor(root.right, p, q)  # 遞迴往右子樹搜尋\n",
+    "\n",
+    "        # 否則，表示此節點正好是兩個節點的分岔點，即為最近共同祖先\n",
+    "        else:\n",
+    "            return root"
    ]
   },
   {
@@ -104,18 +128,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root = 6, p = 4, q = 5\n",
-      "root = 2, p = 4, q = 5\n",
-      "root = 4, p = 4, q = 5\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<__main__.TreeNode at 0x20a480c7ac0>"
+       "4"
       ]
      },
      "execution_count": 4,
@@ -124,13 +139,75 @@
     }
    ],
    "source": [
-    "Solution().lowestCommonAncestor(root, p, q)"
+    "result = Solution().lowestCommonAncestor(root, p, q)\n",
+    "result.val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(h)$**  \n",
+    "**空間複雜度: $O(1)$**\n",
+    "\n",
+    "$ h $: root 的高度  \n",
+    "最佳的情況為平衡樹: $h$ 是 $ O(log n) $  \n",
+    "最差的情況為退化成鏈狀: $h$ 是 $ O(n) $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "        # 當前節點不為空時持續迴圈\n",
+    "        while root:\n",
+    "            # 如果 p 和 q 的值都小於當前節點，代表兩個節點都在左子樹\n",
+    "            if p.val < root.val and q.val < root.val:\n",
+    "                root = root.left  # 繼續往左子樹搜尋\n",
+    "            # 如果 p 和 q 的值都大於當前節點，代表兩個節點都在右子樹\n",
+    "            elif p.val > root.val and q.val > root.val:\n",
+    "                root = root.right  # 繼續往右子樹搜尋\n",
+    "            # 否則，表示此節點正好是兩個節點的分岔點，即為最近共同祖先\n",
+    "            else:\n",
+    "                return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = Solution().lowestCommonAncestor(root, p, q)\n",
+    "result.val"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
