--- a/102. Binary Tree Level Order Traversal.ipynb
+++ b/102. Binary Tree Level Order Traversal.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BFS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +134,7 @@
        "[[3], [9, 20], [15, 7]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,11 +148,120 @@
     "\n",
     "Solution().levelOrder(root)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DFS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O( n )$**  \n",
+    "**空間複雜度: $O( n )$**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional, List\n",
+    "\n",
+    "class Solution:\n",
+    "    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:\n",
+    "        result = []\n",
+    "\n",
+    "        def dfs(node, level):\n",
+    "            # 如果當前節點為空，直接返回（結束此路徑）\n",
+    "            if not node:\n",
+    "                return \n",
+    "            \n",
+    "            print(f\"\\n{node.val = }, {level = }\")\n",
+    "            \n",
+    "            # 如果 result 的長度等於當前層數，代表這層還沒建立子清單\n",
+    "            # 因此要新增一個空清單，來存放這一層的節點值\n",
+    "            if len(result) == level:\n",
+    "                result.append([])\n",
+    "                print(f\"\\nadd a []: {result = }\")\n",
+    "            \n",
+    "            # 將當前節點的值加入對應層級的清單中\n",
+    "            result[level].append(node.val)\n",
+    "            print(f\"{result = }\")\n",
+    "\n",
+    "            # 遞迴處理左子樹，層數 +1\n",
+    "            dfs(node=node.left, level=level + 1)\n",
+    "\n",
+    "            # 遞迴處理右子樹，層數 +1\n",
+    "            dfs(node=node.right, level=level + 1)\n",
+    "\n",
+    "        # 從根節點開始遞迴，層數從 0 開始\n",
+    "        dfs(node=root, level=0)\n",
+    "\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "node.val = 3, level = 0\n",
+      "\n",
+      "add a []: result = [[]]\n",
+      "result = [[3]]\n",
+      "\n",
+      "node.val = 9, level = 1\n",
+      "\n",
+      "add a []: result = [[3], []]\n",
+      "result = [[3], [9]]\n",
+      "\n",
+      "node.val = 15, level = 2\n",
+      "\n",
+      "add a []: result = [[3], [9], []]\n",
+      "result = [[3], [9], [15]]\n",
+      "\n",
+      "node.val = 7, level = 2\n",
+      "result = [[3], [9], [15, 7]]\n",
+      "\n",
+      "node.val = 20, level = 1\n",
+      "result = [[3], [9, 20], [15, 7]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[3], [9, 20], [15, 7]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root = TreeNode(3)\n",
+    "root.left = TreeNode(9)\n",
+    "root.right = TreeNode(20)\n",
+    "root.left.left = TreeNode(15)\n",
+    "root.left.right = TreeNode(7)\n",
+    "\n",
+    "Solution().levelOrder(root)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   },
   "orig_nbformat": 4
  },
